# atlas

./: .env.example  AGENT.md  AGENTS.md  Cargo.toml  Justfile  README.md  README.zh-CN.md  auth.ts  biome.json  drizzle.config.ts  package.json  skills-lock.json
.claude/: .mcp.json
.codex/: config.toml
.codex/environments/: environment.toml
app/: globals.css  layout.tsx
app/(protected)/: layout.tsx  page.tsx
components/: app-sidebar.tsx
components/auth/: auth-panel.tsx  sign-out-button.tsx
components/document-tree/: delete-node-dialog.tsx  document-tree.tsx  node-name-dialog.tsx
components/documents/: atlas-editor-kit.ts  documents-workspace-provider.tsx  editor-shell.tsx  editor-status.tsx  empty-state.tsx
components/editor/: transforms.ts
components/settings/: settings-panel.tsx
components/ui/: block-discussion.tsx  block-list-static.tsx  block-list.tsx  block-suggestion.tsx  callout-node-static.tsx  callout-node.tsx  comment.tsx  emoji-toolbar-button.tsx  equation-toolbar-button.tsx  fixed-toolbar.tsx  heading-node-static.tsx  heading-node.tsx  inline-combobox.tsx  insert-toolbar-button.tsx  link-node.tsx  link-toolbar-button.tsx  list-toolbar-button.tsx  media-image-node-static.tsx  media-toolbar-button.tsx  media-toolbar.tsx  more-toolbar-button.tsx  sidebar.tsx  table-node.tsx  table-toolbar-button.tsx  toolbar.tsx  turn-into-toolbar-button.tsx
drizzle/: 0000_fair_korvac.sql  0001_brief_eternity.sql  0001_chubby_sway.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  (+1 more)
lib/: auth-client.ts  auth-session.ts
src/: main.rs
(+75 files in other folders)
