[package]
name = "atlas"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rust_decimal = { version = "1.41.0", features = ["serde-with-arbitrary-precision"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.1.0"

[dev-dependencies]
tempfile = "3.27.0"
